--- a/index.html
+++ b/index.html
@@ -113,51 +113,57 @@
     <div id="projects" class="projects ">
         <h1>PROJECTS</h1>
         <div class="row">
-            <div class="col-md-4 figure">
-                <a href="https://pixeltribune.herokuapp.com/"> <img width="100%"
-                        src="imgs/Screenshot from 2019-09-09 08-56-36.png" alt=""></a>
-                <div class="caption">
-                    <h5>The Tribune</h5>
-                </div>
-            </div>
-            <div class="col-md-4 figure">
-                <a href="https://gartllery.herokuapp.com/categories"> <img width="100%"
-                        src="imgs/Screenshot from 2019-09-25 10-27-27.png" alt=""></a>
-                <div class="caption">
-                    <h5>Gartllery</h5>
-                </div>
-            </div>
-            <div class="col-md-4 figure">
-                <a href="https://pixelog.herokuapp.com/"> <img width="100%"
-                        src="imgs/Screenshot from 2019-09-25 10-27-51.png" alt=""></a>
-                <div class="caption">
-                    <h5>Pixelog</h5>
-                </div>
-            </div>
+                <div class="col-md-4 card" style="width: 18rem;">
+                    <img src="imgs/Screenshot from 2019-09-09 08-56-36.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="https://pixeltribune.herokuapp.com/" style="color:#fff;" class="btn btn-outline-success">View Site</a>
+                    </div>
+                  </div>
+                  <div class="col-md-4 card" style="width: 18rem;">
+                    <img src="imgs/Screenshot from 2019-09-25 10-27-27.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="https://gartllery.herokuapp.com/categories" style="color:#fff;" class="btn btn-outline-success">View Site</a>
+                    </div>
+                  </div>
+                  <div class="col-md-4 card" style="width: 18rem;">
+                    <img src="imgs/Screenshot from 2019-09-25 10-27-51.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="https://pixelog.herokuapp.com/" style="color:#fff;" class="btn btn-outline-success">View Site</a>
+                    </div>
+                  </div>
         </div>
         <br><br>
         <div class="row">
-            <div class="col-md-4 figure">
-                <a href="https://pixel-0.github.io/the-pizza-peddler/"> <img width="100%"
-                        src="imgs/Screenshot from 2019-09-25 10-32-56.png" alt=""></a>
-                <div class="caption">
-                    <h5>The pizza peddler</h5>
+            <div class="col-md-4 card" style="width: 18rem;">
+                <img src="imgs/Screenshot from 2019-09-25 10-32-56.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="https://pixel-0.github.io/the-pizza-peddler/" style="color:#fff;" class="btn btn-outline-success">View Site</a>
                 </div>
-            </div>
-            <div class="col-md-4 figure">
-                <a href="https://aurry.herokuapp.com/"> <img width="100%"
-                        src="imgs/Screenshot from 2019-09-25 10-32-14.png" alt=""></a>
-                <div class="caption">
-                    <h5>MovieList</h5>
+              </div>
+              <div class="col-md-4 card" style="width: 18rem;">
+                <img src="imgs/Screenshot from 2019-09-25 10-32-14.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="https://aurry.herokuapp.com/" style="color:#fff;" class="btn btn-outline-success">View Site</a>
                 </div>
-            </div>
-            <div class="col-md-4 figure">
-                <a href="https://vigilant-keller-310ee9.netlify.com/"> <img width="100%"
-                        src="imgs/Screenshot from 2019-09-25 10-32-20.png" alt=""></a>
-                <div class="caption">
-                    <h5>Github Search</h5>
+              </div>
+              <div class="col-md-4 card" style="width: 18rem;">
+                <img src="imgs/Screenshot from 2019-09-25 10-32-20.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="https://vigilant-keller-310ee9.netlify.com/" style="color:#fff;" class="btn btn-outline-success">View Site</a>
                 </div>
-            </div>
+              </div>
         </div>
     </div>
 
