--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="col-md-4 card" style="width: 18rem;">
                     <img src="imgs/Screenshot from 2019-09-09 08-56-36.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Tribune</h5>
+                      <h5 style='font-weight:bold;' class="card-title">Tribune</h5>
                       <p class="card-text">Allows users to post latest news and get them viewed by others. Users can also subscribe to get latest articles.</p>
                       <a href="https://pixeltribune.herokuapp.com/" style="color:#fff;" class="btn btn-outline-success">View Site</a>
                     </div>
@@ -124,7 +124,7 @@
                   <div class="col-md-4 card" style="width: 18rem;">
                     <img src="imgs/Screenshot from 2019-09-25 10-27-27.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Gallery</h5>
+                      <h5 style='font-weight:bold;' class="card-title">Gallery</h5>
                       <p class="card-text">An application where a single django administrator can upload and display images and filter them by their category or location.</p>
                       <a href="https://gartllery.herokuapp.com/categories" style="color:#fff;" class="btn btn-outline-success">View Site</a>
                     </div>
@@ -132,7 +132,7 @@
                   <div class="col-md-4 card" style="width: 18rem;">
                     <img src="imgs/Screenshot from 2019-09-25 10-27-51.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Blog</h5>
+                      <h5 style='font-weight:bold;' class="card-title">Blog</h5>
                       <p class="card-text">An application that allows the writer to post their blogs and users to comment and like on them, it also displays random quotes.</p>
                       <a href="https://pixelog.herokuapp.com/" style="color:#fff;" class="btn btn-outline-success">View Site</a>
                     </div>
@@ -143,7 +143,7 @@
             <div class="col-md-4 card" style="width: 18rem;">
                 <img src="imgs/Screenshot from 2019-09-25 10-32-56.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Pizza Peddler</h5>
+                  <h5 style='font-weight:bold;' class="card-title">Pizza Peddler</h5>
                   <p class="card-text">This program allow a user to create a custom pizza and shows the total of their order in a Cart. The user will also be prompted to enter their location if they want the pizza delivered for them. </p>
                   <a href="https://pixel-0.github.io/the-pizza-peddler/" style="color:#fff;" class="btn btn-outline-success">View Site</a>
                 </div>
@@ -151,7 +151,7 @@
               <div class="col-md-4 card" style="width: 18rem;">
                 <img src="imgs/Screenshot from 2019-09-25 10-32-14.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Watchlist</h5>
+                  <h5 style='font-weight:bold;' class="card-title">Watchlist</h5>
                   <p class="card-text">An application that shows recent movies sowing in cinemas, popular movies and upcoming movies.</p>
                   <a href="https://aurry.herokuapp.com/" style="color:#fff;" class="btn btn-outline-success">View Site</a>
                 </div>
@@ -159,7 +159,7 @@
               <div class="col-md-4 card" style="width: 18rem;">
                 <img src="imgs/Screenshot from 2019-09-25 10-32-20.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Github Search</h5>
+                  <h5 style='font-weight:bold;' class="card-title">Github Search</h5>
                   <p class="card-text">This application enables the the user to input their favorite user's account name on github and search for it. It displays the number of repositories the account has and opens them in github when clicked.</p>
                   <a href="https://vigilant-keller-310ee9.netlify.com/" style="color:#fff;" class="btn btn-outline-success">View Site</a>
                 </div>
