--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           </nav>
 
 
-        <h1>SARAH MUNINI</h1>
-        <h1>FULL STACK WEB DEVELOPER</h1>
+        <h1 style="font-size: 4em;">SARAH MUNINI</h1>
+        <h1 style="font-size: 4em;">FULL STACK WEB DEVELOPER</h1>
 
         <h1 class="mojojojo">
             <a href="" class="typewrite" data-period="3000"
