--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/font_icon/css/pe-icon-7-stroke.css">
         <link rel="stylesheet" href="assets/font_icon/css/helper.css">
-        <!-- <link rel="stylesheet" href="assets/css/owl.carousel.css"> -->
-        <!-- <link rel="stylesheet" href="assets/css/owl.theme.css"> -->
-        <!-- <link rel="stylesheet" href="assets/css/animate.css"> -->
+        <link rel="stylesheet" href="assets/css/animate.css">
         <link rel="stylesheet" href="assets/css/style.css">
 
         <!-- google fonts -->
