--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@ window.onload = function() {
         </script>
 
         <!-- Necessery scripts -->
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         <script src="assets/js/jquery-2.1.3.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
