--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1 class="bigheadline">Sarah Munini</h1>
                 <h4 class="subheadline">Full Stack Software Developer</h4>
             </div>
-            <br><br><br>
+            <br><br>
             <h4 style="text-align: center; " class="mojojojo">
                     <a style="color:#fff; font-size:2em;" href="" class="typewrite" data-period="3000"
                         data-type='[ "Code will, uh, find a way...", "May the force be with you...", "Live long and prosper...", "One ring to rule them all...", "Do not let the muggles get you down!" ]'>
@@ -176,6 +176,11 @@
                                 <a href="https://pixeltribune.herokuapp.com/" class="button" target="blank">Take a look</a>
                             </figcaption>
                         </figure>
+                        <br>
+                        <caption>
+                            <p class="card">Allows users to post latest news and get them viewed by others. Users can also
+                                subscribe to get latest articles.</p><a href="https://pixeltribune.herokuapp.com/">Live Site</a>
+                        </caption>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12 item-space">
                         <figure>
@@ -185,6 +190,11 @@
                                 <a href=" https://gartllery.herokuapp.com/categories" class="button" target="blank">Take a look</a>
                             </figcaption>
                         </figure>
+                        <br>
+                        <caption>
+                            <p class="card">An application where a single django administrator can upload and display
+                                images and filter them by their category or location.</p><a href="https://gartllery.herokuapp.com/categories">Live Site</a>
+                        </caption>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12 item-space">
                         <figure>
@@ -194,6 +204,11 @@
                                 <a href=" https://pixelog.herokuapp.com/" class="button" target="blank">Take a look</a>
                             </figcaption>
                         </figure>
+                        <br>
+                        <caption>
+                            <p class="card">An application that allows the writer to post their blogs and users to comment
+                                and like on them, it also displays random quotes.</p><a href="https://pixelog.herokuapp.com/">Live Site</a>
+                        </caption>
                     </div>
                 </div>
                     <div class="row port cs-style-3">
@@ -205,6 +220,12 @@
                                 <a href="https://pixel-0.github.io/the-pizza-peddler/" class="button" target="blank">Take a look</a>
                             </figcaption> 
                         </figure>
+                        <br>
+                        <caption>
+                            <p class="card">This program allow a user to create a custom pizza and shows the total of their
+                                order in a Cart. The user will also be prompted to enter their location if they want the pizza
+                                delivered for them. </p><a href="https://pixel-0.github.io/the-pizza-peddler/">Live Site</a>
+                        </caption>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12 item-space">
                         <figure>
@@ -214,6 +235,11 @@
                                 <a href="https://aurry.herokuapp.com/" class="button" target="blank">Take a look</a>
                             </figcaption> 
                         </figure>
+                        <br>
+                        <caption>
+                            <p class="card">An application that shows recent movies sowing in cinemas, popular movies and
+                                upcoming movies.</p><a href="https://aurry.herokuapp.com/">Live Site</a>
+                        </caption>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12 item-space">
                         <figure>
@@ -223,9 +249,13 @@
                                 <a href="https://vigilant-keller-310ee9.netlify.com/" class="button"target="blank">Take a look</a>
                             </figcaption> 
                         </figure>
-                        
+                        <br>
+                        <caption>
+                            <p class="card">This application enables the the user to input their favorite user's account
+                                name on github and search for it. It displays the number of repositories the account has and
+                                opens them in github when clicked.</p><a href="https://vigilant-keller-310ee9.netlify.com/">Live Site</a>
+                        </caption>
                     </div>
-                   
                 </div>
             </div><!-- container -->
         </section><!-- portfolio -->
